--- a/angular/angular-template/src/app/employee/employee-list/employee-list.component.html
+++ b/angular/angular-template/src/app/employee/employee-list/employee-list.component.html
@@ -82,6 +82,15 @@
             </div>
           </div>
         </div>
+
+<!--        <div *ngIf="isSubmitted then submited else notSubmited"></div>-->
+<!--        <ng-template #notSubmited>-->
+<!--          <h3>Không có kết quả nào để hiển thị</h3>-->
+<!--        </ng-template>-->
+<!--        <ng-template #submited>-->
+<!--          <h1>Tìm ra kết quả</h1>-->
+<!--        </ng-template>-->
+
         <div class="card-body">
           <div class="table-responsive">
             <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
