update token expired and authorizing

--- a/angular/angular-template/src/app/sercurity/verify-password/verify-password.component.html
+++ b/angular/angular-template/src/app/sercurity/verify-password/verify-password.component.html
@@ -37,7 +37,15 @@
                   </div>
                 </div>
               </div>
-              <button class="o3-btn o3-btn-primary o3-btn-block" type="submit">Tạo mật khẩu mới</button>
+
+              <div *ngIf="isSuccessful then success else fail"></div>
+              <ng-template #success>
+                <button class="o3-btn o3-btn-primary o3-btn-block" type="submit">Tạo mật khẩu mới</button>
+              </ng-template>
+              <ng-template #fail>
+                <button class="o3-btn o3-btn-primary o3-btn-block" type="submit" disabled>Tạo mật khẩu mới</button>
+              </ng-template>
+
             </form>
           </div>
         </div>
