--- a/angular/angular-template/src/app/entities/entities-create/entities-create.component.html
+++ b/angular/angular-template/src/app/entities/entities-create/entities-create.component.html
@@ -1,19 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
-  <script src="https://kit.fontawesome.com/d3ad0e260e.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--  <meta charset="UTF-8">-->
+<!--  <meta http-equiv="X-UA-Compatible" content="IE=edge">-->
+<!--  <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+<!--  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">-->
+<!--  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>-->
+<!--  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>-->
+<!--  <script src="https://kit.fontawesome.com/d3ad0e260e.js" crossorigin="anonymous"></script>-->
+<!--  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />-->
 
-  <!-- Custom styles for this page -->
-  <!--  <link href="vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">-->
-  <title>Danh sách chuồng nuôi</title>
-</head>
+<!--  &lt;!&ndash; Custom styles for this page &ndash;&gt;-->
+<!--  &lt;!&ndash;  <link href="vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">&ndash;&gt;-->
+<!--  <title>Danh sách chuồng nuôi</title>-->
+<!--</head>-->
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">LOGO-A04-PROJECT</a>
@@ -229,4 +229,4 @@
   </footer>
 </div>
 </body>
-</html>
+<!--</html>-->
