--- a/angular/angular-template/src/app/entities/entities-list/entities-list.component.html
+++ b/angular/angular-template/src/app/entities/entities-list/entities-list.component.html
@@ -29,7 +29,7 @@
         <a class="dropdown-item" href="#"> <i class="fa-solid fa-carrot"></i> Quản lý thức ăn</a>
         <a class="dropdown-item" href="#"> <i class="fa-solid fa-book-medical"></i> Quản lý bệnh lý</a>
         <a class="dropdown-item" href="#"> <i class="fa-solid fa-truck-moving"></i> Quản lý xuất chuồng</a>
-        <a class="dropdown-item" href="#"> <i class="fa-solid fa-right-from-bracket"></i> Đăng xuất</a>
+        <a class="dropdown-item" [routerLink]="['/login']"> <i class="fa-solid fa-right-from-bracket"></i> Đăng xuất</a>
       </div>
     </div>
   </div>
@@ -137,7 +137,7 @@
 
                 <td>
 
-                  <button class="btn" [routerLink]="['update/'+entity.entitiesId]"><i class="fa-solid fa-pen-clip"
+                  <button class="btn" [routerLink]="['employee/entities/update/'+entity.entitiesId]"><i class="fa-solid fa-pen-clip"
                                                                           style="color: blue;"></i></button>
                 </td>
                 <!--                <td>-->
@@ -145,7 +145,7 @@
                 <!--                  <i class="fa-solid fa-trash-can" style="color: red;"></i>-->
                 <!--                </td>-->
                 <td>
-                  <button class="btn" [routerLink]="['delete/'+entity.entitiesId]"><i class="fa-solid fa-trash-can"
+                  <button class="btn" [routerLink]="['employee/entities/delete/'+entity.entitiesId]"><i class="fa-solid fa-trash-can"
                                                                                       style="color: red;"></i></button>
                 </td>
 
@@ -157,7 +157,7 @@
           <div class="row">
             <div class="col-sm-12 col-md-5">
 
-              <a routerLink="/create">
+              <a routerLink="/employee/entities/create">
                 <button class="btn btn-primary">Khởi tạo</button>
               </a>
             </div>
