pagination hightlight news

--- a/angular/angular-template/src/app/component/header/header.component.html
+++ b/angular/angular-template/src/app/component/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">
-      <img src="https://w7.pngwing.com/pngs/479/838/png-transparent-red-buffalo-house-buffalo-international-fund-buffalo-head-blue-face-logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+      <img src="../../../assets/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
       BREEDER
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
