--- a/angular/angular-template/src/app/new/new-list/new-list.component.html
+++ b/angular/angular-template/src/app/new/new-list/new-list.component.html
@@ -1,7 +1,7 @@
-<div class="container-fluid  mt-4 mb-5" id="content">
+<div class="container-fluid  mt-4 mb-5 min-vh-100" id="content">
 
     <div class="row">  
-      <div class="col-lg-3">
+      <div class="col-lg-3 ">
         <!-- <div class="list-group">
           <a href="#" class="list-group-item list-group-item-action ">  Nhu cầu dùng gạo làm thức ăn chăn nuôi ở châu Á
             tăng mạnh</a>
@@ -23,24 +23,33 @@
           <li class="list-group-item d-flex justify-content-between align-items-center" >
             <form  class="form-inline my-lg-0 mr-lg-2 ">
               <input class="form-control mr-sm-2" name="name" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit" >Search</button>
+              <button class="btn btn-outline-success my-2 my-sm-0" id='btnSearch' type="submit" >Search</button>
             </form>
           </li>
-          <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let news of newsPage">
+          <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let newsHl of newsPage">
             <img src="image/list1.webp" width="50" height="50" class="mr-2" alt="">
-            <a href=" " class="list-group-item-action">{{news.newsName}}</a>
+            <a href=" " class="list-group-item-action" >{{newsHl.newsName}}</a>
           </li>
         </ul>
+        <nav aria-label="Page navigation example">
+          <ul class="pagination justify-content-end">
+            <li class="nav-item" *ngFor="let p of pages;let i=index">
+               <a class="nav-link " href="" (click)="setPage(i,$event)">{{i+1}}</a>
+            </li>
+          </ul>
+        </nav>
       </div>
       <div class="col-lg-9">
-        <div class=" mt-3">
+        <div class=" mt-3">     
+          <h3>Tin tức nổi bật</h3>
           <div class="row" >
-            <div class="col-lg-4 col-md-6 mb-4" *ngFor="let news of newsPage">
+            <div class="col-lg-4 col-md-6 mb-4" *ngFor="let news of newsPageHl">
               <div class="card h-100">
                 <a href="#"><img class="card-img-top" src="image/1.jpg" alt=""></a>
                 <div class="card-body">
-                    <a href="#">{{news.newsName}}</a>
-                    <p class="card-text">{{news.content}}</p>
+                    <a href="#" class="font-weight-bold">{{news.newsName}}</a>
+                    <p class="card-text">{{news.detailDescription}}</p>
+                    <p class="card-text"><i class="fa-regular fa-clock"></i> {{news.createdDate}}</p>
                 </div>
               </div>
             </div>
@@ -49,8 +58,8 @@
         </div>
         <nav aria-label="Page navigation example">
           <ul class="pagination justify-content-end">
-            <li class="nav-item" *ngFor="let p of pages;let i=index">
-               <a class="nav-link " href="" (click)="setPage(i,$event)">{{i+1}}</a>
+            <li class="nav-item" *ngFor="let p of pagesHL;let i=index">
+               <a class="nav-link " href="" (click)="setPageHL(i,$event)">{{i+1}}</a>
             </li>
           </ul>
         </nav>
