--- a/angular/angular-template/src/app/new/new-list/new-list.component.html
+++ b/angular/angular-template/src/app/new/new-list/new-list.component.html
@@ -21,13 +21,16 @@
       </form> -->
         <ul class="list-group">
           <li class="list-group-item d-flex justify-content-between align-items-center" >
-            <form  class="form-inline my-lg-0 mr-lg-2 ">
-              <input class="form-control mr-sm-2" name="name" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" id='btnSearch' type="submit" >Search</button>
-            </form>
+            <div class="container-fluid">
+              <form [formGroup]="searchForm" (ngSubmit)="onSubmit()"  class="form-inline my-lg-0 mr-lg-2 form-group row">
+                <input class="form-control mr-sm-2 col-xl-7 col-lg-12 " name="nameInput" type="search" placeholder="" aria-label="Search" formControlName="nameInput">
+                <button class="btn btn-outline-search my-2 my-sm-0 col-xl-4" id='btnSearch' type="submit">Tìm Kiếm</button>
+              </form>
+            </div>
+
           </li>
-          <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let newsHl of newsPage">
-            <img src="image/list1.webp" width="50" height="50" class="mr-2" alt="">
+          <li class="list-group-item d-flex justify-content-between align-items-center list-news-left" *ngFor="let newsHl of newsPage">
+            <img src="https://www.itourvn.com/images/easyblog_articles/645/b2ap3_large_the-pig-in-traditional-asian-belief-cover.jpg" width="50" height="50" class="mr-2" alt="">
             <a href=" " class="list-group-item-action" >{{newsHl.newsName}}</a>
           </li>
         </ul>
@@ -41,13 +44,13 @@
       </div>
       <div class="col-lg-9">
         <div class=" mt-3">     
-          <h3>Tin tức nổi bật</h3>
+          <h3 class="text-uppercase">Tin tức nổi bật</h3>
           <div class="row" >
             <div class="col-lg-4 col-md-6 mb-4" *ngFor="let news of newsPageHl">
               <div class="card h-100">
-                <a href="#"><img class="card-img-top" src="image/1.jpg" alt=""></a>
+                <a href=""><img class="card-img-top" src="https://www.itourvn.com/images/easyblog_articles/645/b2ap3_large_the-pig-in-traditional-asian-belief-cover.jpg" alt=""></a>
                 <div class="card-body">
-                    <a href="#" class="font-weight-bold">{{news.newsName}}</a>
+                    <a href="#" class="font-weight-bold news-hightlight-name">{{news.newsName}}</a>
                     <p class="card-text">{{news.detailDescription}}</p>
                     <p class="card-text"><i class="fa-regular fa-clock"></i> {{news.createdDate}}</p>
                 </div>
