--- a/angular/angular-template/src/app/employee/employee-edit/employee-edit.component.html
+++ b/angular/angular-template/src/app/employee/employee-edit/employee-edit.component.html
@@ -86,19 +86,10 @@
             <div class="col-sm-8">
               <div class="input-append date" id="dp2" data-date="12-02-2012" data-date-format="dd-mm-yyyy">
                 <input class="span2 form-control" size="16" type="text" formControlName="employeeName">
-<!--                <span class="text-danger" *ngIf="employeeForm.controls.emlpoyeeName.errors?.required && employeeForm.controls.emlpoyeeName.touched">-->
-<!--                  Không được để trống!-->
-<!--                </span>-->
-<!--                <span class="text-danger"-->
-<!--                       *ngIf="employeeForm.get('employeeName').hasError('pattern') && employeeForm.controls.emlpoyeeName.touched"-->
-<!--                       class="text-danger">-->
-<!--                  Tên không được là số hoặc ký tự đặc biệt!-->
-<!--                </span>-->
-<!--                <span class="text-danger"-->
-<!--                       *ngIf="employeeForm.get('employeeName').hasError('maxlength') && employeeForm.controls.name.touched"-->
-<!--                       class="text-danger">-->
-<!--                  Tên không được dài hơn 40 ký tự!-->
-<!--                </span>-->
+                <div style="color: red;"  *ngFor="let validation of validationMessages.employeeName">
+                <span *ngIf="employeeForm.get('employeeName').hasError(validation.type) && (employeeForm.get('employeeName').dirty || employeeForm.get('employeeName').touched)">
+                {{validation.message}}</span>
+                </div>
               </div>
             </div>
           </div>
@@ -138,7 +129,10 @@
             <div class="col-sm-8">
               <div class="input-append date" id="dp6" data-date="12-02-2012" data-date-format="dd-mm-yyyy">
                 <input class="span2 form-control" size="16" type="text" formControlName="email">
-                <span style="color: red;"></span>
+                <div style="color: red;"  *ngFor="let validation of validationMessages.email">
+                <span *ngIf="employeeForm.get('email').hasError(validation.type) && (employeeForm.get('email').dirty || employeeForm.get('email').touched)">
+                {{validation.message}}</span>
+                </div>
               </div>
             </div>
           </div>
@@ -148,10 +142,11 @@
             <div class="col-sm-8">
               <div class="input-append date" id="dp7" data-date="12-02-2012" data-date-format="dd-mm-yyyy">
                 <input class="span2 form-control" size="16" type="date" formControlName="birthday">
-<!--                <small class="text-danger" *ngIf="employeeForm.get('birthday').hasError('ageNotEnough')-->
-<!--                                               && employeeForm.controls.birthday.touched">-->
-<!--                  Ngày sinh phải lớn hơn 18 và nhỏ hơn 100!-->
-<!--                </small>-->
+                <div style="color: red;"  *ngFor="let validation of validationMessages.birthday">
+                  <span *ngIf="employeeForm.get('birthday').hasError(validation.type) && (employeeForm.get('birthday').dirty || employeeForm.get('birthday').touched|| employeeForm.get('birthday').untouched)">
+                  {{validation.message}}</span>
+                  <span *ngIf="employeeForm.get('birthday').hasError('flag')">Ngày sinh không được lớn hơn ngày hiện tại!</span>
+                </div>
               </div>
             </div>
           </div>
@@ -159,22 +154,26 @@
           <div class="form-group row">
             <label  class="col-form-label ml-3" style="width: 150px;">Giới tính<span class="text-danger">*</span></label>
             <div class="col-sm-7">
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" formControlName="gender" id="inlineRadio1" value="Nam">
-                <label class="form-check-label" for="inlineRadio1">Nam</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" formControlName="gender" id="inlineRadio2" value="Nữ">
-                <label class="form-check-label" for="inlineRadio2">Nữ</label>
-              </div>
-<!--              <div class="form-check" id="dp9">-->
-<!--                <select formControlName="gender">-->
-<!--                  <option value="Nam" [selected]="employeeForm.value.gender">Nam</option>-->
-<!--                  <option value="Nữ" [selected]="employeeForm.value.gender">Nữ</option>-->
-<!--                </select>-->
+<!--              <div class="form-check form-check-inline">-->
+<!--                <input class="form-check-input" type="radio" formControlName="gender" id="inlineRadio1" value="Nam">-->
+<!--                <label class="form-check-label" for="inlineRadio1">Nam</label>-->
 <!--              </div>-->
-            </div>
+<!--              <div class="form-check form-check-inline">-->
+<!--                <input class="form-check-input" type="radio" formControlName="gender" id="inlineRadio2" value="Nữ">-->
+<!--                <label class="form-check-label" for="inlineRadio2">Nữ</label>-->
+<!--              </div>-->
+<!--              <div class="form-check form-check-inline">-->
+<!--                <input class="form-check-input" type="radio" formControlName="gender" id="inlineRadio3" value="Khác">-->
+<!--                <label class="form-check-label" for="inlineRadio2">Khác</label>-->
+<!--              </div>-->
 
+              <div class="form-check form-check-inline" *ngFor="let gender of genderList">
+                <input id="sport-{{gender.id}}" type="radio" value="{{gender.value}}" name="{{gender.name}}"
+                       formControlName="{{gender.name}}">
+                <label for="sport-{{gender.id}}">{{gender.label}}</label>
+              </div>
+
+            </div>
           </div>
 
           <div class="form-group row" >
@@ -182,12 +181,10 @@
             <div class="col-sm-8">
               <div class="input-append date" id="dp10" data-date="12-02-2012" data-date-format="dd-mm-yyyy">
                 <input class="span2 form-control" size="16" type="text" formControlName="idCard">
-<!--                <small class="text-danger" style="clear: both" *ngIf="employeeForm.controls.idCard.errors?.required && employeeForm.controls.idCard.touched" class="text-danger">-->
-<!--                  Không được để trống!-->
-<!--                </small>-->
-<!--                <small class="text-danger" style="clear: both" *ngIf="employeeForm.controls.idCard.errors?.pattern && employeeForm.controls.idCard.touched" class="text-danger">-->
-<!--                  CMND phải là 9 số!-->
-<!--                </small>-->
+                <div style="color: red;"  *ngFor="let validation of validationMessages.idCard">
+                <span *ngIf="employeeForm.get('idCard').hasError(validation.type) && (employeeForm.get('idCard').dirty || employeeForm.get('idCard').touched)">
+                {{validation.message}}</span>
+                </div>
               </div>
             </div>
           </div>
@@ -197,14 +194,10 @@
             <div class="col-sm-8">
               <div class="input-append date" id="dp11" data-date="12-02-2012" data-date-format="dd-mm-yyyy">
                 <input class="span2 form-control" size="16" type="text" formControlName="address">
-<!--                <small class="text-danger" *ngIf="employeeForm.controls.address.errors?.required && employeeForm.controls.address.touched">-->
-<!--                  Không được để trống!-->
-<!--                </small>-->
-<!--                <small class="text-danger"-->
-<!--                       *ngIf="employeeForm.get('address').hasError('maxlength') && employeeForm.controls.address.touched"-->
-<!--                       class="text-danger">-->
-<!--                  Địa chỉ không được dài hơn 40 ký tự!-->
-<!--                </small>-->
+                <div style="color: red;"  *ngFor="let validation of validationMessages.address">
+                <span *ngIf="employeeForm.get('address').hasError(validation.type) && (employeeForm.get('address').dirty || employeeForm.get('address').touched)">
+                {{validation.message}}</span>
+                </div>
               </div>
             </div>
           </div>
