--- a/angular/angular-template/src/app/entities/entities-delete/entities-delete.component.html
+++ b/angular/angular-template/src/app/entities/entities-delete/entities-delete.component.html
@@ -1,87 +1,84 @@
-<<<<<<< HEAD
-<body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">LOGO-A04-PROJECT</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-          aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<!--<body>-->
+<!--<nav class="navbar navbar-expand-lg navbar-light bg-light">-->
+<!--  <a class="navbar-brand" href="#">LOGO-A04-PROJECT</a>-->
+<!--  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"-->
+<!--          aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">-->
+<!--    <span class="navbar-toggler-icon"></span>-->
+<!--  </button>-->
 
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-    <ul class="navbar-nav mr-auto ml-auto mt-2 mt-lg-0">
-      <li class="nav-item active">
-        <a class="nav-link text-uppercase" href="#">Trang chủ <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link text-uppercase" href="#">Tin tức</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link text-uppercase" href="#">Về chúng tôi</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link text-uppercase" href="#">Liên Hệ</a>
-      </li>
-    </ul>
-    <div class="dropleft">
-      <button type="button" class="btn btn-nav dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">Putin <i class="fa-solid fa-circle-user"></i></button>
-      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="#"> <i class="fa-solid fa-gears"></i> Quản lý hệ thống </a>
-        <a class="dropdown-item" href="#"> <i class="fa-solid fa-circle-info"></i> Quản lý thông tin đàn</a>
-        <a class="dropdown-item" href="#"> <i class="fa-solid fa-carrot"></i> Quản lý thức ăn</a>
-        <a class="dropdown-item" href="#"> <i class="fa-solid fa-book-medical"></i> Quản lý bệnh lý</a>
-        <a class="dropdown-item" href="#"> <i class="fa-solid fa-truck-moving"></i> Quản lý xuất chuồng</a>
-        <a class="dropdown-item" href="#"> <i class="fa-solid fa-right-from-bracket"></i> Đăng xuất</a>
-      </div>
-    </div>
-  </div>
-</nav>
-<div class="container-fluid" id="content">
-  <div class="row">
-    <div class="col-lg-3 ml-0">
-      <!-- Sidebar -->
-      <div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 280px; height: 1000px;">
-        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-          <svg class="bi me-2" width="40" height="32">
-            <use xlink:href="#bootstrap"/>
-          </svg>
-          <span class="fs-4"><strong>Quản lý hệ thống</strong></span>
-        </a>
-        <hr>
-        <ul class="nav nav-pills flex-column mb-auto">
-          <li class="nav-item">
-            <a href="#" class="nav-link active" aria-current="page">
-              <svg class="bi me-2" width="16" height="16">
-                <use xlink:href="#home"/>
-              </svg>
-              Quản lý cá thể
-            </a>
-          </li>
-          <li>
-            <a href="#" class="nav-link link-dark">
-              <svg class="bi me-2" width="16" height="16">
-                <use xlink:href="#speedometer2"/>
-              </svg>
-              Quản lý thông báo
-            </a>
-          </li>
+<!--  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">-->
+<!--    <ul class="navbar-nav mr-auto ml-auto mt-2 mt-lg-0">-->
+<!--      <li class="nav-item active">-->
+<!--        <a class="nav-link text-uppercase" href="#">Trang chủ <span class="sr-only">(current)</span></a>-->
+<!--      </li>-->
+<!--      <li class="nav-item active">-->
+<!--        <a class="nav-link text-uppercase" href="#">Tin tức</a>-->
+<!--      </li>-->
+<!--      <li class="nav-item active">-->
+<!--        <a class="nav-link text-uppercase" href="#">Về chúng tôi</a>-->
+<!--      </li>-->
+<!--      <li class="nav-item active">-->
+<!--        <a class="nav-link text-uppercase" href="#">Liên Hệ</a>-->
+<!--      </li>-->
+<!--    </ul>-->
+<!--    <div class="dropleft">-->
+<!--      <button type="button" class="btn btn-nav dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown"-->
+<!--              aria-haspopup="true" aria-expanded="false">Putin <i class="fa-solid fa-circle-user"></i></button>-->
+<!--      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">-->
+<!--        <a class="dropdown-item" href="#"> <i class="fa-solid fa-gears"></i> Quản lý hệ thống </a>-->
+<!--        <a class="dropdown-item" href="#"> <i class="fa-solid fa-circle-info"></i> Quản lý thông tin đàn</a>-->
+<!--        <a class="dropdown-item" href="#"> <i class="fa-solid fa-carrot"></i> Quản lý thức ăn</a>-->
+<!--        <a class="dropdown-item" href="#"> <i class="fa-solid fa-book-medical"></i> Quản lý bệnh lý</a>-->
+<!--        <a class="dropdown-item" href="#"> <i class="fa-solid fa-truck-moving"></i> Quản lý xuất chuồng</a>-->
+<!--        <a class="dropdown-item" href="#"> <i class="fa-solid fa-right-from-bracket"></i> Đăng xuất</a>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</nav>-->
+<!--<div class="container-fluid" id="content">-->
+<!--  <div class="row">-->
+<!--    <div class="col-lg-3 ml-0">-->
+<!--      &lt;!&ndash; Sidebar &ndash;&gt;-->
+<!--      <div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 280px; height: 1000px;">-->
+<!--        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">-->
+<!--          <svg class="bi me-2" width="40" height="32">-->
+<!--            <use xlink:href="#bootstrap"/>-->
+<!--          </svg>-->
+<!--          <span class="fs-4"><strong>Quản lý hệ thống</strong></span>-->
+<!--        </a>-->
+<!--        <hr>-->
+<!--        <ul class="nav nav-pills flex-column mb-auto">-->
+<!--          <li class="nav-item">-->
+<!--            <a href="#" class="nav-link active" aria-current="page">-->
+<!--              <svg class="bi me-2" width="16" height="16">-->
+<!--                <use xlink:href="#home"/>-->
+<!--              </svg>-->
+<!--              Quản lý cá thể-->
+<!--            </a>-->
+<!--          </li>-->
+<!--          <li>-->
+<!--            <a href="#" class="nav-link link-dark">-->
+<!--              <svg class="bi me-2" width="16" height="16">-->
+<!--                <use xlink:href="#speedometer2"/>-->
+<!--              </svg>-->
+<!--              Quản lý thông báo-->
+<!--            </a>-->
+<!--          </li>-->
 
-        </ul>
-        <hr>
+<!--        </ul>-->
+<!--        <hr>-->
 
-        <!-- Sidebar -->
-      </div>
-    </div>
-    <div class="col-lg-9 ">
+<!--        &lt;!&ndash; Sidebar &ndash;&gt;-->
+<!--      </div>-->
+<!--    </div>-->
+<!--    <div class="col-lg-9 ">-->
 
 
       <!--            table entities-->
-      <div class="" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
+
             <div class="modal-header">
               <h5 class="modal-title">Xác nhận xóa</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="closeDialog()">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
@@ -89,76 +86,72 @@
               <p>Bạn có chắc muốn xóa cá thể có mã là {{entity.entitiesId}} </p>
               <h6>(Hành động này sẽ không thể hoàn tác)</h6>
             </div>
+
             <div class="modal-footer">
               <button type="button" class="btn btn-primary" (click)="deleteEntities(entity.entitiesId)">Có </button>
-              <button type="button" class="btn btn-secondary" data-dismiss="modal" [routerLink]="['/entities']">Không</button>
+              <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="closeDialog()">Không</button>
             </div>
-          </div>
-        </div>
-      </div>
 
 
 
-    </div>
-  </div>
-</div>
-<footer class="">
-  <div class="container py-5">
-    <div class="row py-4">
-      <div class="col-lg-4 col-md-6 mb-4 mb-lg-0"><img src="img/logo.png" alt="" width="180" class="mb-3">
-        <p class="font-italic text-muted">Kết nối với chúng tôi.</p>
-        <ul class="list-inline mt-4">
-          <li class="list-inline-item"><a href="#" target="_blank" title="twitter"><i
-            class="fa fa-twitter i-footer"></i></a></li>
-          <li class="list-inline-item"><a href="#" target="_blank" title="facebook"><i
-            class="fa fa-facebook i-footer"></i></a></li>
-          <li class="list-inline-item"><a href="#" target="_blank" title="instagram"><i
-            class="fa fa-instagram i-footer"></i></a></li>
-          <li class="list-inline-item"><a href="#" target="_blank" title="pinterest"><i
-            class="fa fa-pinterest i-footer"></i></a></li>
-          <li class="list-inline-item"><a href="#" target="_blank" title="vimeo"><i
-            class="fa fa-vimeo i-footer"></i></a></li>
-        </ul>
-      </div>
-      <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
-        <h6 class="text-uppercase font-weight-bold mb-4">Sản phẩm</h6>
-        <ul class="list-unstyled mb-0">
-          <li class="mb-2"><a href="#" class="text-muted">Thức Ăn</a></li>
-          <li class="mb-2"><a href="#" class="text-muted">Thuốc</a></li>
-          <li class="mb-2"><a href="#" class="text-muted">Giống</a></li>
-          <li class="mb-2"><a href="#" class="text-muted">Cá Thể</a></li>
-        </ul>
-      </div>
-      <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
-        <h6 class="text-uppercase font-weight-bold mb-4">Hệ thống</h6>
-        <ul class="list-unstyled mb-0">
-          <li class="mb-2"><a href="#" class="text-muted">Đăng nhập</a></li>
-          <li class="mb-2"><a href="#" class="text-muted">Đăn ký</a></li>
-        </ul>
-      </div>
-      <div class="col-lg-4 col-md-6 mb-lg-0">
-        <h6 class="text-uppercase font-weight-bold mb-4">Gửi ý kiến</h6>
-        <p class="text-muted mb-4">Mọi thắc mắc xin liên hệ cho chúng tôi.</p>
-        <div class="p-1 rounded border">
-          <div class="input-group">
-            <input type="email" placeholder="Enter your email address" aria-describedby="button-addon1"
-                   class="form-control border-0 shadow-0">
-            <div class="input-group-append">
-              <button id="button-addon1" type="submit" class="btn btn-link"><i class="fa fa-paper-plane"></i></button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
+<!--<footer class="">-->
+<!--  <div class="container py-5">-->
+<!--    <div class="row py-4">-->
+<!--      <div class="col-lg-4 col-md-6 mb-4 mb-lg-0"><img src="img/logo.png" alt="" width="180" class="mb-3">-->
+<!--        <p class="font-italic text-muted">Kết nối với chúng tôi.</p>-->
+<!--        <ul class="list-inline mt-4">-->
+<!--          <li class="list-inline-item"><a href="#" target="_blank" title="twitter"><i-->
+<!--            class="fa fa-twitter i-footer"></i></a></li>-->
+<!--          <li class="list-inline-item"><a href="#" target="_blank" title="facebook"><i-->
+<!--            class="fa fa-facebook i-footer"></i></a></li>-->
+<!--          <li class="list-inline-item"><a href="#" target="_blank" title="instagram"><i-->
+<!--            class="fa fa-instagram i-footer"></i></a></li>-->
+<!--          <li class="list-inline-item"><a href="#" target="_blank" title="pinterest"><i-->
+<!--            class="fa fa-pinterest i-footer"></i></a></li>-->
+<!--          <li class="list-inline-item"><a href="#" target="_blank" title="vimeo"><i-->
+<!--            class="fa fa-vimeo i-footer"></i></a></li>-->
+<!--        </ul>-->
+<!--      </div>-->
+<!--      <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">-->
+<!--        <h6 class="text-uppercase font-weight-bold mb-4">Sản phẩm</h6>-->
+<!--        <ul class="list-unstyled mb-0">-->
+<!--          <li class="mb-2"><a href="#" class="text-muted">Thức Ăn</a></li>-->
+<!--          <li class="mb-2"><a href="#" class="text-muted">Thuốc</a></li>-->
+<!--          <li class="mb-2"><a href="#" class="text-muted">Giống</a></li>-->
+<!--          <li class="mb-2"><a href="#" class="text-muted">Cá Thể</a></li>-->
+<!--        </ul>-->
+<!--      </div>-->
+<!--      <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">-->
+<!--        <h6 class="text-uppercase font-weight-bold mb-4">Hệ thống</h6>-->
+<!--        <ul class="list-unstyled mb-0">-->
+<!--          <li class="mb-2"><a href="#" class="text-muted">Đăng nhập</a></li>-->
+<!--          <li class="mb-2"><a href="#" class="text-muted">Đăn ký</a></li>-->
+<!--        </ul>-->
+<!--      </div>-->
+<!--      <div class="col-lg-4 col-md-6 mb-lg-0">-->
+<!--        <h6 class="text-uppercase font-weight-bold mb-4">Gửi ý kiến</h6>-->
+<!--        <p class="text-muted mb-4">Mọi thắc mắc xin liên hệ cho chúng tôi.</p>-->
+<!--        <div class="p-1 rounded border">-->
+<!--          <div class="input-group">-->
+<!--            <input type="email" placeholder="Enter your email address" aria-describedby="button-addon1"-->
+<!--                   class="form-control border-0 shadow-0">-->
+<!--            <div class="input-group-append">-->
+<!--              <button id="button-addon1" type="submit" class="btn btn-link"><i class="fa fa-paper-plane"></i></button>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
 
-  <!-- Copyrights -->
-  <div class="bg-light py-4">
-    <div class="container text-center">
-      <p class="text-muted mb-0 py-2">© 2019 Bootstrapious All rights reserved.</p>
-    </div>
-  </div>
-</footer>
-</body>
-=======
->>>>>>> a51e78a7bdf8d617472df2360e79564fa825bc59
+<!--  &lt;!&ndash; Copyrights &ndash;&gt;-->
+<!--  <div class="bg-light py-4">-->
+<!--    <div class="container text-center">-->
+<!--      <p class="text-muted mb-0 py-2">© 2019 Bootstrapious All rights reserved.</p>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</footer>-->
+<!--</body>-->
