--- a/angular/angular-template/src/app/entities/entities-list/entities-list.component.html
+++ b/angular/angular-template/src/app/entities/entities-list/entities-list.component.html
@@ -29,7 +29,7 @@
         <a class="dropdown-item" href="#"> <i class="fa-solid fa-carrot"></i> Quản lý thức ăn</a>
         <a class="dropdown-item" href="#"> <i class="fa-solid fa-book-medical"></i> Quản lý bệnh lý</a>
         <a class="dropdown-item" href="#"> <i class="fa-solid fa-truck-moving"></i> Quản lý xuất chuồng</a>
-        <a class="dropdown-item" [routerLink]="['/login']"> <i class="fa-solid fa-right-from-bracket"></i> Đăng xuất</a>
+        <a class="dropdown-item" (click)="logOut()"> <i class="fa-solid fa-right-from-bracket"></i> Đăng xuất</a>
       </div>
     </div>
   </div>
@@ -137,7 +137,7 @@
 
                 <td>
 
-                  <button class="btn" [routerLink]="['employee/entities/update/'+entity.entitiesId]"><i class="fa-solid fa-pen-clip"
+                  <button class="btn" [routerLink]="['update/'+entity.entitiesId]"><i class="fa-solid fa-pen-clip"
                                                                           style="color: blue;"></i></button>
                 </td>
                 <!--                <td>-->
@@ -145,7 +145,7 @@
                 <!--                  <i class="fa-solid fa-trash-can" style="color: red;"></i>-->
                 <!--                </td>-->
                 <td>
-                  <button class="btn" [routerLink]="['employee/entities/delete/'+entity.entitiesId]"><i class="fa-solid fa-trash-can"
+                  <button class="btn" [routerLink]="['delete/'+entity.entitiesId]"><i class="fa-solid fa-trash-can"
                                                                                       style="color: red;"></i></button>
                 </td>
 
@@ -209,7 +209,7 @@
 <footer class="">
   <div class="container py-5">
     <div class="row py-4">
-      <div class="col-lg-4 col-md-6 mb-4 mb-lg-0"><img src="img/logo.png" alt="" width="180" class="mb-3">
+      <div class="col-lg-4 col-md-6 mb-4 mb-lg-0"><img src="" alt="" width="180" class="mb-3">
         <p class="font-italic text-muted">Kết nối với chúng tôi.</p>
         <ul class="list-inline mt-4">
           <li class="list-inline-item"><a href="#" target="_blank" title="twitter"><i
@@ -263,3 +263,6 @@
     </div>
   </div>
 </footer>
+
+
+
