--- a/angular/angular-template/src/app/component/header/header.component.html
+++ b/angular/angular-template/src/app/component/header/header.component.html
@@ -44,34 +44,12 @@
           <a class="dropdown-item" href="#"> <i class="fa-solid fa-carrot"></i> Quản lý thức ăn</a>
           <a class="dropdown-item" href="#"> <i class="fa-solid fa-book-medical"></i> Quản lý bệnh lý</a>
           <a class="dropdown-item" href="#"> <i class="fa-solid fa-truck-moving"></i> Quản lý xuất chuồng</a>
-          <a class="dropdown-item" type="button" data-toggle="modal" data-target="#myModal"> <i class="fa-solid fa-right-from-bracket"></i> Đăng xuất</a>
+          <a class="dropdown-item" type="button"  (click)="openDialog()"> <i class="fa-solid fa-right-from-bracket"></i> Đăng xuất</a>
         </div>
         </div>
       </ng-template>
-
 <!--    </div>-->
   </div>
 </nav>
 
-<!-- Modal -->
-<div id="myModal" class="modal fade">
-  <div class="modal-dialog modal-dialog-centered modal-confirm">
-    <div class="modal-content">
-      <div class="modal-header flex-column">
-        <div class="icon-box">
-          <i class="fa-solid fa-right-from-bracket"></i>
-        </div>
-        <h4 class="modal-title w-100">Xác Nhận Đăng Xuất</h4>
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-      </div>
-      <div class="modal-body">
-        <p>Bạn có chắc muốn đăng xuất khỏi tài khoản này không?</p>
-      </div>
-      <div class="modal-footer justify-content-center">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Hủy</button>
-        <button type="button" class="btn btn-danger" (click)="logOut()" >Đăng xuất</button>
-      </div>
-    </div>
-  </div>
-</div>
 
