--- a/angular/angular-template/src/app/component/header/header.component.css
+++ b/angular/angular-template/src/app/component/header/header.component.css
@@ -9,23 +9,62 @@
 
 /*css for modal logout*/
 
-.btn-logout {
+.dropbtn {
   background-color: #66c992;
   border-radius: 5px;
-  color: white;
+  color: black;
   border: none;
   min-height: 40px;
   margin: 0 5px;
 }
 
-.btn-logout:hover{
+.dropbtn:hover, .dropbtn:focus {
   border-radius: 5px;
-  background: #499e6f;
+  background: #50ad7a;
 }
 
 body {
   font-family: 'Varela Round', sans-serif;
 }
+
+/*.dropbtn {*/
+/*  background-color: #3498DB;*/
+/*  color: white;*/
+/*  padding: 16px;*/
+/*  font-size: 16px;*/
+/*  border: none;*/
+/*  cursor: pointer;*/
+/*}*/
+
+/*.dropbtn:hover, .dropbtn:focus {*/
+/*  background-color: #2980B9;*/
+/*}*/
+
+.dropleft {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropleft a:hover {background-color: #66c992;}
+
+.show {display: block;}
 
 
 
