--- a/angular/angular-template/src/app/component/header/header.component.html
+++ b/angular/angular-template/src/app/component/header/header.component.html
@@ -21,24 +21,36 @@
       </li>
     </ul>
 
+    <div *ngIf="isLoggedIn then  loggedIn else notLogIn"></div>
 
-    <div class="dropleft">
-      <div *ngIf="isLoggedIn then  loggedIn else notLogIn"></div>
-
-      <ng-template #notLogIn>
-          <button class="btn-logout" [routerLink]="['/login']">
-            Đăng nhập <i class="fa-solid fa-circle-user"></i>
-          </button>
-      </ng-template>
-
-
-      <ng-template #loggedIn>
-        <button class="btn-logout" (click)="openDialog()">
-          Đăng xuất <i class="fa-solid fa-right-from-bracket"></i>
+    <ng-template #notLogIn>
+      <div class="dropleft">
+        <button type="button" class="dropbtn" [routerLink]="['/login']">
+          Đăng nhập <i class="fa-solid fa-circle-user"></i>
         </button>
-      </ng-template>
-    </div>
+      </div>
+    </ng-template>
+
+
+    <ng-template #loggedIn>
+      <div class="dropleft">
+        <button onclick="myFunction()" class="dropbtn">
+          {{username}} <i class="fa-solid fa-circle-user"></i>
+        </button>
+        <div id="myDropdown" class="dropdown-content dropdown-menu">
+          <a class="dropdown-item" href="#"> <i class="fa-solid fa-gears"></i> Quản lý hệ thống </a>
+          <a class="dropdown-item" href="#"> <i class="fa-solid fa-circle-info"></i> Quản lý thông tin đàn</a>
+          <a class="dropdown-item" href="#"> <i class="fa-solid fa-carrot"></i> Quản lý thức ăn</a>
+          <a class="dropdown-item" href="#"> <i class="fa-solid fa-book-medical"></i> Quản lý bệnh lý</a>
+          <a class="dropdown-item" href="#"> <i class="fa-solid fa-truck-moving"></i> Quản lý xuất chuồng</a>
+          <a class="dropdown-item" type="button" (click)="openDialog()"> <i class="fa-solid fa-right-from-bracket"></i>
+            Đăng xuất</a>
+        </div>
+      </div>
+    </ng-template>
+
   </div>
 </nav>
+
 
 
